Review Request 17214 minor change in run-tomcat.sh